[project]
name = "task-helper"
version = "1.0.0"
description = "Focus on just your top 3 free-time tasks using simple Elo prioritization."
readme = "README.md"
requires-python = ">=3.12.2"
authors = [
  { name = "derDere" }
]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
org = "derDere"
product = "task-helper"
company = "derDere"
copyright = "Copyright (C) 2025 by derDere.de"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
